--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="left-container">
             <div class="gif">
-                <img src="cat.gif" />
+                <img src="proxy-image.gif" />
             </div>
         </div>
 
